--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="static/css/style.css">
 
     <!-- Weather Icons (http://erikflowers.github.io/weather-icons/) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.3.2/css/weather-icons.min.css">
+    <link rel="stylesheet" href="static/css/weather-icons.css">
+    <link rel="stylesheet" href="static/css/weather-icons-wind.css">
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -35,13 +36,36 @@
 
 <body>
 
-    <h1>Your Local Weather</h1>
+    <div id="weather-form" class="hidden">
 
-    <h2 id="city"></h2>
-    <h2 id="latitude"></h2>
-    <h2 id="longitude"></h2>
-    <h2 id="temperature"></h2>
-    <h2 id="weather"></h2>
+        <div id="weather-header">
+            <h1>Your Local Weather</h1>
+        </div>
+
+        <div id="weather-body">
+            <div id="weather-temps">
+                <div id="weather-condition">
+                    <i id="weather-icon" class="wi"></i>
+                    <span id="conditions"></span>
+                </div>
+                <div id="temp-main">
+                    <span id="temperature"></span>
+                    <span id="feels-like"></span>
+                </div>
+                <div id="range-today">
+                    <div id="high-low">
+                        <div id="high">
+                            <span id="high-temp"></span>
+                        </div>
+                        <div id="low">
+                            <span id="low-temp"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     <div id="footer">
         <span id="copyright">&copy; 2017 Michael Reisz</span>
